fix(gulp-replace): missing dependency

--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "type": "commonjs",
   "description": "build and deployment tools for @littlewaer/ projects",
   "main": "",
+  "bin": {
+    "gulp": "node_modules/gulp/bin/gulp.js",
+    "jasmine": "node_modules/jasmine/bin/jasmine.js",
+    "tsc": "node_modules/typescript/bin/tsc",
+    "tslint": "node_modules/tslint/bin/tslint"
+  },
   "files": [
     "README.md",
     "web/*",
@@ -12,33 +18,35 @@
     "tslint.json"
   ],
   "dependencies": {
+    "gulp-nunjucks-render": "latest",
+    "gulp-replace": "latest",
+    "gulp-rev-replace": "latest",
+    "gulp-rimraf": "latest",
+    "gulp-sourcemaps": "latest",
+    "gulp-typescript": "latest",
+    "gulp-watch": "latest",
+    "marked": "latest",
+    "merge2": "latest",
+    "mkdirp": "latest",
+    "nunjucks": "latest",
+    "nunjucks-markdown": "latest"
+  },
+  "devDependencies": {
     "@types/bunyan": "latest",
     "@types/express": "latest",
     "@types/jasmine": "latest",
     "@types/node": "latest",
     "@webcomponents/webcomponentsjs": "latest",
     "gulp": "latest",
-    "gulp-nunjucks-render": "latest",
-    "gulp-rev-replace": "latest",
-    "gulp-rimraf": "latest",
-    "gulp-sourcemaps": "latest",
-    "gulp-typescript": "latest",
-    "gulp-watch": "latest",
     "jasmine": "latest",
     "jasmine-core": "latest",
     "karma": "latest",
     "karma-chrome-launcher": "latest",
     "karma-jasmine": "latest",
-    "marked": "latest",
-    "merge2": "latest",
-    "mkdirp": "latest",
-    "nunjucks": "latest",
-    "nunjucks-markdown": "latest",
     "ts-custom-elements": "latest",
     "tslint": "latest",
     "typescript": "latest"
   },
-  "devDependencies": {},
   "scripts": {
     "build": "gulp",
     "start": "little-server /modules/@littleware/little-elements/web/ ./web/ /admin module:./commonjs/bin/helloHandler.js",
