--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         //noImplicitAny: true,
-        "target": "commonjs",
+        "target": "ESNEXT",
+        "module": "commonjs",
         "sourceMap": true,
         "declaration": true,
         "sourceRoot": "src",
