--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@littleware/little-nodedev",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "type": "commonjs",
   "description": "build and deployment tools for @littlewaer/ projects",
   "main": "",
@@ -10,7 +10,8 @@
     "commonjs/*",
     "site/*",
     "spec/*",
-    "tslint.json",
+    ".eslintrc.js",
+    ".eslintignore",
     "gulpfile.js",
     "gulpHelper.js"
   ],
@@ -33,7 +34,15 @@
     "@types/express": "latest",
     "@types/jasmine": "latest",
     "@types/node": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "@webcomponents/webcomponentsjs": "latest",
+    "eslint": "latest",
+    "eslint-config-airbnb-typescript": "latest",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsx-a11y": "latest",
+    "eslint-plugin-react": "latest",
+    "eslint-plugin-react-hooks": "latest",
     "gulp": "latest",
     "jasmine": "latest",
     "jasmine-core": "latest",
@@ -41,14 +50,13 @@
     "karma-chrome-launcher": "latest",
     "karma-jasmine": "latest",
     "ts-custom-elements": "latest",
-    "tslint": "latest",
     "typescript": "latest"
   },
   "scripts": {
     "build": "gulp",
     "start": "little-server /modules/@littleware/little-elements/web/ ./web/ /admin module:./commonjs/bin/helloHandler.js",
     "watch": "gulp little-watch",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "lint": "eslint -c .eslintrc.js 'src'",
     "test": "jasmine"
   },
   "repository": {
